--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-requirements.txt
+Flask==2.2.5
+requests==2.31.0
+python-dotenv==1.0.1
+pandas==2.2.2
+openpyxl==3.1.2
+XlsxWriter==3.2.0
+xhtml2pdf==0.2.8
+
